--- a/sass/index.sass
+++ b/sass/index.sass
@@ -25,6 +25,12 @@ body
   width: 40px
   background-size: 30px
   float: right
+#wikipedia
+  background: url(https://upload.wikimedia.org/wikipedia/en/8/80/Wikipedia-logo-v2.svg) no-repeat center
+  width: 40px
+  background-size: 30px
+  float: right
+  margin: 0 15px
 
 #overlay
   position: fixed
