lightroom: pillar preview

--- a/sass/liro.sass
+++ b/sass/liro.sass
@@ -8,8 +8,14 @@
       padding: 15px
       display: block
       flex-grow: 1
+    hr
+      margin: 1rem 0
+#board
+  line-height: 0
 canvas
   width: 100%
+  &#preview
+    width: auto
 .column
   padding: .15rem .75rem
 input[type=range].slider
