--- a/views/gol/index.html
+++ b/views/gol/index.html
@@ -1,26 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <title>
-        Conway's Game of Life
-    </title>
-    <meta name="viewport" content="initial-scale=1, width=device-width"/>
-    <link rel="stylesheet" href="../bulma.min.css">
-    <link rel="stylesheet" href="../fontawesome-free/css/all.min.css">
-    <link rel="stylesheet" href="../style.css">
-    <link rel="stylesheet" href="style.css">
-    <script src="../require.js"></script>
-    <script src="../jquery.min.js"></script>
-    <script src="app.js"></script>
-</head>
-<body>
-<header class="header">
-    <div class="container">
-        <div class="navbar-brand">
-            <a href="../index.html" class="fas fa-chevron-left"></a> CONWAY'S GAME OF LIFE
-        </div>
-    </div>
-</header>
+<% layout('../layout.eta.html', {
+    title: 'Conway\'s Game of Life',
+}) %>
+
 <div class="container" id="field">
     <div class="card">
         <div id="board">
@@ -45,21 +26,3 @@
     <label class="label" for="tick">TICK:</label><input type="number" id="tick" value="500" class="input">
     <button type="button" class="button" id="setTick">Set tick</button>
 </div>
-
-<div id="overlay">
-    <div class="card"></div>
-</div>
-
-<script>
-    let app;
-    $(function () {
-        require(
-            ['gol/App'],
-            (main) => {
-                app = new main.App();
-            }
-        );
-    })
-</script>
-</body>
-</html>
