favicon to suppress express errors

--- a/views/index.html
+++ b/views/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <title>TS Games</title>
+    <link rel="icon" href="/static/favicon.ico">
     <link rel="stylesheet" href="/static/bulma.min.css">
     <link rel="stylesheet" href="/static/style.css">
     <style>
