--- a/views/layout.eta.html
+++ b/views/layout.eta.html
@@ -5,6 +5,7 @@
         <%~ it.title %>
     </title>
     <meta name="viewport" content="initial-scale=0.7, width=device-width"/>
+    <link rel="icon" href="/static/favicon.ico">
     <link rel="stylesheet" href="/static/bulma.min.css">
     <% if (it.bulmaSliders) { %>
       <link rel="stylesheet" href="/static/bulma-slider.min.css">
