ciso: Stalin Sort

--- a/views/ciso/index.html
+++ b/views/ciso/index.html
@@ -22,4 +22,5 @@
     <button type="button" class="button" onclick="app.sort(4)">Quick Sort</button>
     <button type="button" class="button" onclick="app.sort(5)">Bubble Sort</button>
     <button type="button" class="button" onclick="app.sort(6)">Schedule Sort</button>
+    <button type="button" class="button" onclick="app.sort(7)">Stalin Sort</button>
 </div>
