mw: reset from overlay

--- a/views/layout.eta.html
+++ b/views/layout.eta.html
@@ -32,7 +32,10 @@
 <%~ it.body %>
 
 <div id="overlay">
-    <div class="card"></div>
+    <div class="card">
+        <div></div>
+        <button type="button" class="button" id="overlayReset">Reset</button>
+    </div>
 </div>
 
 <script>
