--- a/sass/index.sass
+++ b/sass/index.sass
@@ -46,3 +46,8 @@ body
 
   .card
     padding: 25px 40px
+    display: flex
+    flex-direction: column
+    align-items: center
+    button
+      margin-top: 1em
