--- a/views/ciso/index.html
+++ b/views/ciso/index.html
@@ -21,6 +21,7 @@
     <button type="button" class="button" onclick="app.sort(3)">Heap Sort</button>
     <button type="button" class="button" onclick="app.sort(4)">Quick Sort</button>
     <button type="button" class="button" onclick="app.sort(5)">Bubble Sort</button>
-    <button type="button" class="button" onclick="app.sort(6)">Schedule Sort</button>
-    <button type="button" class="button" onclick="app.sort(7)">Stalin Sort</button>
+    <button type="button" class="button" onclick="app.sort(6)">Radix Sort</button>
+    <button type="button" class="button" onclick="app.sort(7)">Schedule Sort</button>
+    <button type="button" class="button" onclick="app.sort(8)">Stalin Sort</button>
 </div>
