ciso: bogo sort

--- a/views/ciso/index.html
+++ b/views/ciso/index.html
@@ -24,4 +24,5 @@
     <button type="button" class="button" onclick="app.sort(6)">Radix Sort</button>
     <button type="button" class="button" onclick="app.sort(7)">Schedule Sort</button>
     <button type="button" class="button" onclick="app.sort(8)">Stalin Sort</button>
+    <button type="button" class="button" onclick="app.sort(9)">Bogo Sort</button>
 </div>
